--- a/pages/p2/954583.md
+++ b/pages/p2/954583.md
@@ -1,4 +1,4 @@
-### 17则古训赠当今(图)
+### 吉林出状况 四高官落马 含孙政才金融总管(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="孙政才" src="https://img2.secretchina.com/pic/2017/7-25/p1943681a392785967-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   行舍其华，言去其辩。（看中国：手绘插画 志清）
+   孙政才（图片来源: Lintao Zhang/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,59 +29,51 @@
   </div>
  </div>
  <p>
+  【看中国2020年12月4日讯】（看中国记者晏清流综合报导）
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
-    古训
+   <span href="https://www.secretchina.com/news/gb/tag/吉林" target="_blank">
+    吉林
    </span>
   </strong>
-  是先人
+  省近期连续四名高官落马，包括吉林省政府副秘书长
   <strong>
-   智慧
+   邱鹏
   </strong>
-  的
+  与
   <strong>
-   结晶
+   高材林
   </strong>
-  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
+  。邱鹏是吉林省现任政法委书记、前副省长侯淅珉大秘。高材林发迹于上海帮金融圈，担任过多名吉林副省级高官的大秘，更被指是已倒台的前政治局委员
+  <strong>
+   孙政才
+  </strong>
+  当年的金融总管。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
+  12月3日，中共中纪委官网援引吉林省纪委消息通报，吉林省体育局党组成员、副局长韩俊华落马。12月1日，吉林省政府副秘书长
+  <span href="https://www.secretchina.com/news/gb/tag/邱鹏" target="_blank">
+   邱鹏
+  </span>
+  被查。一个月前，11月2日，吉林省政府副秘书长高材林落马。10月19日，吉林省农业投资集团有限公司党委书记、董事长袁维森被查。
  </p>
  <p>
-  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
-  <br>
-   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
-  </br>
+  这四名官员落马，发生在中央巡视组进驻之后。10月14日，中纪委官网报导，中央第八巡视组组长宁延宁带队巡视吉林省工作动员会召开，巡视期间约2个半月。
  </p>
  <p>
-  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
-  <br>
-   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
-  </br>
+  12月1日落马的吉林省政府副秘书长邱鹏，1964年5月出生，吉林市人，历任吉林市环保局副局长、市政府副秘书长，吉林市城乡建设委员会副主任、主任，桦甸市委副书记、副市长、代市长、市长、市委书记、吉林省交通运输厅副厅长；2018年4月至今，任吉林省政府副秘书长。
  </p>
  <p>
-  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
-  <br>
-   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
-  </br>
+  邱鹏2018年4月任吉林省政府副秘书长后，多次陪同时任吉林副省长侯淅珉考察，显示其是侯淅珉的大秘。
  </p>
  <p>
-  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
-  <br>
-   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
-   <br>
-    <br>
-     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
-     <br>
-      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
-     </br>
-    </br>
-   </br>
-  </br>
+  <span href="https://zh.wikipedia.org/wiki/%E4%BE%AF%E6%B7%85%E7%8F%89" target="_blank">
+   侯淅珉
+  </span>
+  ，1963年7月生，河南淅川人，早年担任过建设部住房保障与公积金监督管理司司长、住房和城乡建设部住房保障司司长。2010年11月空降安徽，历任铜陵市委副书记、市长、安徽省住房和城乡建设厅厅长、安徽省政府秘书长，2017年11月，侯淅珉调任吉林省副省长；2020年3月7日，侯淅珉转任吉林省政法委书记。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -96,9 +88,11 @@
   </div>
  </center>
  <p>
-  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
-  <br/>
-  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
+  11月2日落马的吉林省政府副秘书长
+  <span href="https://www.secretchina.com/news/gb/tag/高材林" target="_blank">
+   高材林
+  </span>
+  ，1964年2月出生，湖南汉寿人，早年在中国央行上海总部任公开市场操作部副主任。2009年10月调任吉林省政府办公厅党组成员、副主任，省金融工作领导小组办公室主任。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,9 +107,11 @@
   </div>
  </center>
  <p>
-  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
-  <br/>
-  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
+  2009年11月，时任中共农业部长
+  <span href="https://www.secretchina.com/news/gb/tag/孙政才" target="_blank">
+   孙政才
+  </span>
+  调任吉林省委书记；一个月后，吉林省长韩长赋接替孙政才任农业部长；吉林省委副书记王儒林接替韩长赋任吉林省长。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,9 +126,7 @@
   </div>
  </center>
  <p>
-  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
-  <br/>
-  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
+  高材林自2009年10月开始任省金融工作领导小组办公室主任、吉林省金融工作办公室主任、党组书记，之后六年一直在吉林省负责金融工作。期间王儒林、巴音朝鲁先后任省长、书记。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -147,48 +141,11 @@
   </div>
  </center>
  <p>
-  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
-  <br/>
-  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
-  <br/>
-  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
-  <br/>
-  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
-  <br/>
-  <br/>
-  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
-  <br/>
-  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
+  2014年9月、
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  农业银行董事长蒋超良调任吉林省长，随后，2015年7月，高材林卸任吉林省金融工作办公室党组书记、主任；调任吉林省松原市委副书记、副市长、代市长；蒋超良2016年11月调任湖北省委书记，一年后，2017年12月，高材林重新回到吉林省政府，担任省政府副秘书长至此次被查。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,9 +164,7 @@
   </ins>
  </center>
  <p>
-  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
-  <br/>
-  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
+  前述这几与高材林有工作交集的高官中，孙政才后来于2017年中共十九大前、在重庆市委书记职位上落马。孙政才被指是江派推出的中央接班人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,9 +179,11 @@
   </div>
  </center>
  <p>
-  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
-  <br/>
-  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
+  时政评论员李燕铭据此认为，上海帮金融圈背景的高材林与孙政才同期调任吉林省，并出任省金融工作领导小组办公室主任，实为孙政才的金融总管；这应该是
+  <span href="https://www.secretchina.com/news/gb/tag/江泽民" target="_blank">
+   江泽民
+  </span>
+  派系为扶植孙政才的配套人事部署。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,43 +198,7 @@
   </div>
  </center>
  <p>
-  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
-  <br/>
-  【今译】只知前进不知后退，是招取祸败的道途。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
-  <br/>
-  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
-  <br/>
-  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
+  另外，高材林除了2014年至2017年在吉林省松原市主政三年外，自2009年10月开始任吉林省政府办公厅党组成员、副主任、省政府副秘书长等职，前后共计八年，担任多名吉林副省级高官的大秘，其跟过的包括2013年时任吉林省委常委、常务副省长马俊清考察。2017年12月时任吉林副省长安立佳等。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -341,13 +262,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954583.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954583.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954583.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/04/954583.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/954583.md' width='0px' height='0px'/>
