同步于: 12月4日12时52分

--- a/pages/p7/938210.md
+++ b/pages/p7/938210.md
@@ -1,4 +1,4 @@
-### 蔡英文喊话习近平 北京不领情 胡锡进呛“看军力怕了”(图)
+### 17则古训赠当今(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,13 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="胡锡进 " src="https://img3.secretchina.com/pic/2020/10-11/p2793601a513529255-ss.jpg" style="height:338px; width:600px"/>
+  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   《环球时报》总编辑
-   <strong>
-    胡锡进
-   </strong>
-   呛说，大陆政府应保持强大且随时可能激发的军事压力，震住台湾。（图片来源：视频截图）
+   行舍其华，言去其辩。（看中国：手绘插画 志清）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -25,76 +21,67 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月11日讯】（看中国记者黎小葵综合报导）10月10日是台湾
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/双十国庆" target="_blank">
-    双十国庆
+   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
+    古训
    </span>
   </strong>
-  ，总统
+  是先人
   <strong>
-   蔡英文
+   智慧
   </strong>
-  在国庆大会就两岸议题释放善意，称愿与中国大陆和平相处。但《环球时报》总编辑
+  的
   <strong>
-   胡锡进
+   结晶
   </strong>
-  呛说，大陆政府应保持强大且随时可能激发的军事压力，震住台湾。
+  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   蔡英文双十演说喊话
-   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-    习近平
-   </span>
-  </strong>
+  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
  </p>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/蔡英文" target="_blank">
-   蔡英文
-  </span>
-  稍早于10月10日在中华民国109年国庆日大会中发表国庆演说，她以“团结台湾，自信前行”为主题，分4个部分，谈及台湾防疫成果、新台湾经济战略、国防战力，以及外交如何积极参与区域合作。
+  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
+  <br>
+   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
+  </br>
  </p>
  <p>
-  其中在在说到“积极作为，参与区域合作”内容时，蔡英文表示“我们坚持主权以及守护民主价值的原则，不会改变；但在策略上，也会保持弹性、灵活应变。”她还说，“我也注意到，对岸领导人最近在对联合国的视讯演说中，公开表示：中国永远不称霸，不扩张，不谋求势力范围。”
+  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
+  <br>
+   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
+  </br>
  </p>
  <p>
-  蔡英文表示，北京如果能正视台湾的声音，改变处理两岸关系的态度，和台湾共同促成两岸的和解及和平对话，相信一定可以化解区域的紧张局势。她喊话，“维持两岸关系的稳定，是两岸共同的利益；我们有决心维持两岸的稳定，但这不是台湾可以单方面承担，而是双方共同的责任。”
+  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
+  <br>
+   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
+  </br>
  </p>
  <p>
-  也为此，蔡英文认为现阶段两岸当务之急，是共同讨论和平相处之道、共存之方。她以向北京递出橄榄枝的姿态声称，“只要北京当局有心化解对立，改善两岸关系，在符合对等尊严的原则下，我们愿意共同促成有意义的对话。这就是台湾人民的主张，也是朝野政党的共识。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/胡锡进" target="_blank">
-    胡锡进
-   </span>
-   呛蔡英文怕中共军力
-  </strong>
+  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
+  <br>
+   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
+   <br>
+    <br>
+     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
+     <br>
+      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
+     </br>
+    </br>
+   </br>
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -109,7 +96,9 @@
   </div>
  </center>
  <p>
-  蔡英文双十国庆日的讲话，引起外界广泛关注。
+  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
+  <br/>
+  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -124,7 +113,9 @@
   </div>
  </center>
  <p>
-  美联社的相关报导以&lt;台湾领导人希望缓和与中国的紧张关系&gt;为题，着重关注蔡英文重启对话的意愿；路透社以&lt;台湾总统呼吁和中国开展‘有意义的对话’&gt;为题，报导了蔡英文在讲话中针对北京发出信息。
+  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
+  <br/>
+  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -139,7 +130,9 @@
   </div>
  </center>
  <p>
-  截至目前，北京方面对蔡英文双十演讲的内容没有作出回应。
+  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
+  <br/>
+  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -154,7 +147,9 @@
   </div>
  </center>
  <p>
-  但中共大外宣、《环球时报》总编辑胡锡进在微博上发文称，“蔡英文今天（10日）上午的‘双十’谈话，涉两岸内容是近年来口气最软的一次”，这样的表态明显少以往的嚣张。 “之所以有这样的变化，原因很简单，是大陆近来动真格的军事斗争准备让一贯放肆挑衅大陆的蔡英文当局感受到了他们可能真的遭到战争惩罚的严重性。
+  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
+  <br/>
+  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -169,7 +164,31 @@
   </div>
  </center>
  <p>
-  胡锡进强调，“大陆对台必须保持强大且随时可能激发的军事压力，才能够震住他们，让他们收敛”。
+  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
+  <br/>
+  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
+  <br/>
+  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
+  <br/>
+  <br/>
+  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
+  <br/>
+  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -188,9 +207,9 @@
   </ins>
  </center>
  <p>
-  <strong>
-   中共侵台恐付极大代价
-  </strong>
+  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
+  <br/>
+  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -205,7 +224,9 @@
   </div>
  </center>
  <p>
-  众所周知，近期中共对台军事动作频频，中台是否会开战备受关注。
+  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
+  <br/>
+  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -220,7 +241,9 @@
   </div>
  </center>
  <p>
-  彭博社台北分社社长埃利斯（Samson Ellis）8天撰文指出，中共若出兵打台湾恐怕会付出惨烈代价。他进一步分析，从表面数据看，两岸军事力量中共占尽优势，光是军费开支预算，中共就是台湾的25倍。因此，中方每提到武统议题时，都乐观描绘攻略过程，如开战前以网络部队透过电子战攻击台湾的金融系统、关键基础设施、美国卫星，同时出动军舰骚扰限制燃料、食物等物资补给，接着利用空袭“斩首式”歼灭台湾政治、军事领导人，再到投放伞兵入侵台湾海岸线，渗透、占领、建立滩头。
+  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
+  <br/>
+  【今译】只知前进不知后退，是招取祸败的道途。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -235,7 +258,26 @@
   </div>
  </center>
  <p>
-  他指出，但其实台湾占有地理优势，除了四面环海、多变天气、蜿蜒崎岖的海岸线等，台湾早已为中共侵犯的可能做了数十年准备。此外，中共还需考量另一大重点便是美国，倘若两岸开战或引发美中开战。
+  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
+  <br/>
+  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
+  <br/>
+  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -267,7 +309,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -299,13 +341,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/948832.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/948832.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/948832.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/11/948832.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/948832.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
