--- a/pages/p1/954676.md
+++ b/pages/p1/954676.md
@@ -1,4 +1,4 @@
-### 浙江“小麦书房”卖宗教书籍 店主遭判刑7年(图)
+### 大陆出台离婚冷静期 引发网络一片哗然(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,81 +6,102 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="中国没有宗教自由" src="https://img3.secretchina.com/pic/2020/1-8/p2599792a62906731-ss.jpg" style="height:337px; width:600px"/>
-  <br>
-   天主教徒 （图片来源：PETER PARKS/AFP/Getty Images）
-   <span id="hideid" name="hideid" style="color:red;display:none;">
-    <span href="https://www.secretchina.com">
-    </span>
+ <p style="text-align:center">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/4-16/p2671352a590391274-ss.jpg" style="height:337px; width:600px"/>
+  <span id="hideid" name="hideid" style="color:red;display:none;">
+   <span href="https://www.secretchina.com">
    </span>
-  </br>
+  </span>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看
-  <span href="https://www.secretchina.com/news/gb/tag/中国" target="_blank">
-   中国
-  </span>
-  2020年10月3日讯】
+  【看中国2020年12月4日讯】（看中国记者文俪综合报导）中国民政部近日出台文件，自2021年1月1日起，
   <strong>
-   中国
+   <span href="https://www.secretchina.com/news/gb/tag/协议离婚" target="_blank">
+    协议离婚
+   </span>
   </strong>
-  近年推行所谓
+  要经过一个
   <strong>
-   宗教
+   冷静期
   </strong>
-  “中国化”的政策，
+  ，在满离婚冷静期后的30天之内，需要双方共同领取
   <strong>
-   信仰自由
+   离婚证
   </strong>
-  进一步遭受打压。近日，浙江一家网上书店负责人因销售宗教
-  <strong>
-   书籍
-  </strong>
-  ，被当地法院以“非法经营罪”重判7年。
+  ，逾期不领则视为撤回离婚申请。另外，婚姻登记处将不再受理因胁迫结婚而请求撤销的业务。消息一出，便迅速登上微博热搜，截至发稿，该条消息的阅读量已达7.5亿，讨论超过19.3万条。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  近年中国当局加强取缔非官方
-  <span href="https://www.secretchina.com/news/gb/tag/宗教" target="_blank">
-   宗教
+  综合陆媒报导，自2021年1月1日起，民政局协议离婚的夫妻，需要经过申请、受理、
+  <span href="https://www.secretchina.com/news/gb/tag/冷静期" target="_blank">
+   冷静期
   </span>
-  书籍。据了解，涉事的“小麦书房”早在去年9月就被当局盯上，以“书房”长期出售美国和台湾宗教刊物，涉及770本境外书籍，吸引上万人次购买为由，把店主刑事拘留。
+  、审查、发证五个步骤。满离婚冷静期后的30天之内，双方需要共同领取离婚证，逾期不领则被视为撤加离婚申请。
  </p>
  <p>
-  至于买书的人当局也不放过。据说公安部要求各地公安部门配合，根据从小麦书房搜索到的收货单，联络收货人取证。山东、河南、浙江等地的基督徒顾客先后反映，公安曾到他们家搜查问话，并没收全数非官方宗教
-  <span href="https://www.secretchina.com/news/gb/tag/书籍" target="_blank">
-   书籍
+  另外，因胁迫结婚而请求撤销的业务，婚姻登记处将不再受理。根据《民典法》规定，因胁迫结婚的，受胁迫方可以向法院请求撤销婚姻。
+ </p>
+ <p>
+  消息一出，网友们议论纷纷。
+ </p>
+ <p>
+  有网友表示，如果遇到家暴男，那谁能保障女性的安全：“我表舅妈被我表舅硬生生打断手臂，躲了他两年提出离婚，如果要两人同时领取，谁能保证我表舅妈的安全？”、“过期不领就默认撤回！人都被家暴打死了，还能冷静期来领
+  <span href="https://www.secretchina.com/news/gb/tag/离婚证" target="_blank">
+   离婚证
   </span>
-  。有信徒更引述警察说，“小麦书房”已被视为“反华势力”。
+  ？领死亡证明呢吧”、“5个步骤会不会已经被打死了啊？”、“遇上家暴男，冷静期变凉透期。你想离，家暴方不离，你就等着被打死”、“5个步骤下来人都火化了”、“遇上家暴男这个过程人已经死透了”、“何止，冥婚都能安排上了，30天包送冥婚火化入土”、“坟头草都长出来了”、“5个步骤下来的话，已经开始进入投胎环节了”、“所以这个政策就是提醒女性，被打死也不一定离的了，所以谨慎结婚”。
  </p>
  <p>
-  近日传出消息，“小麦书房”姓陈的负责人被浙江临海市人民法院裁定“非法经营”罪成，判刑7年，罚款20万元人民币。
+  另有网友认为这是官方在暗示不要轻易结婚：“民政局的意思是离婚不容易，千万别轻易结婚”、“劝单身，用心良苦”、“官方劝你别结婚，我一定响应国家的号召”、“劝单成功，不婚不育保平安，女人坚决不能当婚驴。”
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  台湾真理大学宗教文化与组织管理系教授张家麟表示，虽然宗教书籍在未经官方认可的书店售卖在中国被视作违法，但浙江法院的裁决仍然使人意外。
+  有网友觉得倒不如直接给结婚冷静期：“希望民政部也考虑一下结婚时的步骤，让大家知道婚姻是什么样子的，然后再去结婚。”
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  张家麟：“判7年的确是第一次听到判得那么重的。以前有网上或实体书店被判刑，但都没有7年那么重的。这可能跟浙江地区法院的认知，为了实践
-  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-   习近平
+  网友调侃称：“只要国家以后不强制配对结婚，我对这个文件没啥意见了，挺好，不结婚更不会离婚了。”、“以前农村光棍还能等等二婚三婚的，多等一等总归能轮到，现在好了离不成，打死了，这法案可真是不给光棍留活路啊。”、“以后就等各种死老婆的新闻，可以起名‘老婆的一千万种死法’。”、“砖家们是认为只要不离婚就会和好，和好就能继续给国家播种，继续播种就能提高
+  <span href="https://www.secretchina.com/news/gb/search?nohard=0&amp;q=%E7%94%9F%E8%82%B2" target="_blank">
+   生育率
   </span>
-  的宗教政策有关系。如果要买合法的圣经，可能要在天主教或基督教的三自爱国教会相对有保障，而这个圣经是经过中共审核。”
+  吗？”、“是不是以后生满几个娃才准离婚啊？”、“郭嘉（国家）表示：我不听，我不听”、“我妈都反过来劝我别结婚了，哈哈。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -95,9 +116,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   非官方宗教书籍销售空间今非昔比
-  </strong>
+  甚至有网友担心还会出台单身税：“怕不是以后满多少年岁必须结婚生子，否则多交税”、“收单身税，不想生孩子就交钱。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -112,7 +131,7 @@
   </div>
  </center>
  <p>
-  广州一名要求匿名的家庭教会基督徒也对判决有异议。
+  还有网友嘲讽道：“每个接受不了的条款出来之前都会先预热一波，好让大家心里有个底，然后实施，韭菜们只能接受”、“干脆强制配种不更直接？生育率蹭蹭涨，韭菜一茬一茬割都割不完！再也不怕老龄化！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -126,67 +145,6 @@
    </center>
   </div>
  </center>
- <p>
-  基督徒：“其他一些违法行为，像贪官污吏和诈骗有时候只是判个半年、三两年。教徒经营这种书店对社会并没有造成任何破坏，却要被判三至五年，很不公平。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  他说，非官方宗教书籍的销售空间今非昔比。以自己为例，日常购买这类书籍都要费一番功夫。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  基督徒：“前几年还好，可以随意在网上订购一些你想要的关于基督教的东西。这几年我们很少去网上订了，因为全部不给在网上卖了。你留下信息纪录的话他们就会查到，基本上我们也不买，主要是在网上下载电子版，因为我懂得‘翻墙’。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  有基督徒表示，自从政府追查他购买宗教书籍，自己变得非常谨慎。为了防止政府监听电话，他删除了所有手机APP以及有关宗教的联系人，并退出基督教社交网络群组。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- (文章仅代表作者个人立场和观点)
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -205,7 +163,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -237,13 +195,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948041.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948041.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948041.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/03/948041.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954676.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954676.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954676.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/04/954676.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/948041.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/954676.md' width='0px' height='0px'/>
