--- a/pages/p7/938210.md
+++ b/pages/p7/938210.md
@@ -1,4 +1,4 @@
-### 央视恢复NBA转播 背后推手是谁？(图)
+### 17则古训赠当今(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="NBA" src="https://img2.secretchina.com/pic/2019/10-14/p2540481a899004062-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   2019年10月10日，洛杉矶湖人队（L）的亚历克斯卡洛索（Alex Caruso）和布鲁克林篮网队的贾里特艾伦（Jarrett Allen）在上海比赛。（图片来源：Zhong Zhi/Getty Images）
+   行舍其华，言去其辩。（看中国：手绘插画 志清）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,69 +21,67 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月11日讯】在中国对美国职业篮球协联赛（
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/NBA" target="_blank">
-    NBA
+   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
+    古训
    </span>
   </strong>
-  ）进行了近一年的“封杀”后，中国官方媒体央视稍早宣布，于周六上午恢复播出NBA比赛。这场因中国敏感
+  是先人
   <strong>
-   人权议题
+   智慧
   </strong>
-  引发的风波似乎也告一段落。
+  的
+  <strong>
+   结晶
+  </strong>
+  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  去年十月，美国休斯顿火箭队的总经理莫雷 (Daryl Morey) 在推特发布了一张带有“为自由而战”和“与香港同在” (Fight For Freedom, Stand with Hong Kong) 字样的图片。这条只有七个字的推文立即激起层层涟漪，触发了NBA在
-  <span href="https://www.secretchina.com/news/gb/tag/中国" target="_blank">
-   中国
-  </span>
-  最大的一场商业危机。
+  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
  </p>
  <p>
-  包括中国央视体育频道、腾讯体育等媒体平台暂停了NBA季前赛（中国赛）的转播安排外，多家中国企业和机构相继撤资，电商平台也下架了有关产品。
+  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
+  <br>
+   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
+  </br>
  </p>
  <p>
-  <strong>
-   恢复NBA赛事转播 背后推手是谁？
-  </strong>
+  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
+  <br>
+   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
+  </br>
  </p>
  <p>
-  时隔一年，中国央视体育频道10月9日宣布，星期六上午恢复播出NBA比赛。该频道发言人解释，篮球运动在中国有着广泛的群众基础和球迷的收视需求，同时还提到，NBA持续表达善意，特别是今年初以来，在支援中国人民抗击
-  <span href="https://www.secretchina.com/news/gb/tag/新冠肺炎" target="_blank">
-   新冠肺炎
-  </span>
-  疫情等方面做出了积极努力。
+  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
+  <br>
+   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
+  </br>
  </p>
  <p>
-  记者试图联系NBA查询具体细节，但截稿时仍未收到回复。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  对于中国方面的恢复转播决定，美国民间机构“信息与战略研究所”经济学者李恒青接受记者采访时认为：“断播这段时间里相关企业机构赚少了很多钱。另外在美中关系有彻底脱钩的迹象之际，我想中国是想通过NBA‘说事’，希望和美国保持沟通。”
+  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
+  <br>
+   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
+   <br>
+    <br>
+     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
+     <br>
+      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
+     </br>
+    </br>
+   </br>
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,9 +96,9 @@
   </div>
  </center>
  <p>
-  <strong>
-   巨大市场利益不能丢
-  </strong>
+  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
+  <br/>
+  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -115,7 +113,9 @@
   </div>
  </center>
  <p>
-  美国《芝加哥论坛报》（Chicago Tribune）曾报道，中国市场占NBA年度总收入的10%，中国方面的一系列报复行动令NBA收益遭受严重损失。不过，腾讯网当时刚刚与NBA完成续约，以15亿美元购得NBA2020至2025年在中国的独家数字媒体转播权。似乎是为了降低损失，但又要与中国官方态度保持一致，腾讯曾短暂恢复部分NBA比赛直播，但休斯顿火箭队的赛事则被排除在外。
+  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
+  <br/>
+  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,7 +130,9 @@
   </div>
  </center>
  <p>
-  美国南卡大学商务教授谢田认为，NBA在中国的生意牵扯着太多利益。
+  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
+  <br/>
+  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,7 +147,9 @@
   </div>
  </center>
  <p>
-  “虽然我们目前不知道恢复转赛背后是否因为NBA和中国官方达成了交易，但NBA肯定是要和当局做出妥协。中国巨大的粉丝市场是NBA所看重的，也涉及到官方人物的利益。同时，由于目前中国受到各方围剿，所以要利用和美国企业的商业合作粉饰太平。”
+  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
+  <br/>
+  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -160,9 +164,9 @@
   </div>
  </center>
  <p>
-  <strong>
-   牵涉人权事件 NBA语焉不详
-  </strong>
+  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
+  <br/>
+  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,56 +181,14 @@
   </div>
  </center>
  <p>
-  美国专业篮球媒体HoopsVibe 2008年发文评出NBA五大海外市场，中国市场位列榜首。值得注意的是，文章同时也提到中国的人权状况有损中国作为未来世界经济强国的声誉。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  HoopsVibe的担忧也并非毫无道理。继莫雷风波后，美国体育频道ESPN报道，多名NBA教练披露在中国执教期间，新疆训练中心存在年轻球员遭当地员工虐待和骚扰的情况。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  美国国会共和党籍参议员布莱克本（Marsha Blackburn）曾就有关事件去信NBA要求回应，NBA副总裁塔图姆（Mark Tatum）回信简短表明，NBA已有一年多没有和新疆篮球学院有任何联系，双方合作已经终止。随后，布莱克本发声明炮轰NBA的“技术性回答”没有说明该公司的财务决策是否与其所宣称的价值存在冲突。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  在巨大利益面前，美国企业似乎很难因
-  <span href="https://www.secretchina.com/news/gb/tag/人权议题" target="_blank">
-   人权议题
-  </span>
-  而对中国市场说不。
+  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
+  <br/>
+  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
+  <br/>
+  <br/>
+  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
+  <br/>
+  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -245,7 +207,9 @@
   </ins>
  </center>
  <p>
-  NBA总监萧华（Adam Silver）今年9月接受美国有线新闻网（CNN）访谈时讲到NBA与中国的关系，表示会持续推动双方的合作，认为NBA是在向中国输出美国价值观。至于在华美企的去留问题应该由美国政府来决定。
+  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
+  <br/>
+  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -260,7 +224,9 @@
   </div>
  </center>
  <p>
-  谢田向记者表示，美国公司通常很难以一己之力与中国政府对抗。
+  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
+  <br/>
+  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -275,7 +241,9 @@
   </div>
  </center>
  <p>
-  “如果所有企业一起，例如美国商会号召所有企业威胁中国改善人权，不然就撤资，但他们做不到。中国政府对在华外企的控制无孔不入，不会让这些独立运作，这些个体面临着很大的压力，有些也被当局收买，很难联合起来形成一股压力。”
+  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
+  <br/>
+  【今译】只知前进不知后退，是招取祸败的道途。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -290,7 +258,9 @@
   </div>
  </center>
  <p>
-  谢田建议各国政府学习日本的做法，为撤出在中国的企业提供补贴。
+  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
+  <br/>
+  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -305,21 +275,9 @@
   </div>
  </center>
  <p>
-  李恒青也以美国网络巨头雅虎香港分公司早年应中国国安机关的要求提供信息，导致中国网络异议人士师涛和王小宁锒铛入狱一事为例，呼吁企业保持公义，关注中国人权状况。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
+  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
+  <br/>
+  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -351,7 +309,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -383,13 +341,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/948836.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/948836.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/948836.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/11/948836.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/948836.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
