--- a/pages/p7/938210.md
+++ b/pages/p7/938210.md
@@ -1,4 +1,4 @@
-### 美将港列收容难民名单 移民顾问感到悲哀(图)
+### 17则古训赠当今(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="香港 难民 美国" src="https://img3.secretchina.com/pic/2020/10-2/p2787738a792675129-ss.jpg" style="height:450px; width:600px"/>
+  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   香港难民 （图片来源：看中国李天正）
+   行舍其华，言去其辩。（看中国：手绘插画 志清）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,74 +21,67 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月3日讯】随着
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/香港" target="_blank">
-    香港
+   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
+    古训
    </span>
   </strong>
-  形势急转直下，
+  是先人
   <strong>
-   美国
+   智慧
   </strong>
-  国务院首次建议将香港列入收容
+  的
   <strong>
-   难民
+   结晶
   </strong>
-  的地区名单；另外，众议院外交委员会全票通过《香港人民自由和选择法案》。曾协助香港示威者取得政治庇护的人士指，香港破天荒列入美国的收容难民计划，与古巴和委内瑞拉并列，他感到悲哀。另有香港抗争派认为，情况反映国际认同香港受到严重压迫。
+  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
-   美国
-  </span>
-  众议院外交事务委员会在当地时间周四（10月1日）、亦即中国国庆当日，以口头方式表决，通过民主党议员马利诺夫斯基提出的《香港人民自由和选择法案》。接下来，法案仍须在众议院、参议院获得通过，才能递交给总统签署后生效。
+  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
  </p>
  <p>
-  香港民主委员会（HKDC）一直有份推动法案，其总监朱牧民周五（10月2日）接受本台访问，指今次议案通过有非常重大意义，显示美国不单口头上支持香港民主运动，更以实际行动支持。他指不少美国国会议员、公民都觉得《国安法》下，香港已由
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  最开放城市变成最不自由城市，法案特别可以帮助受威胁的抗争者。
+  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
+  <br>
+   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
+  </br>
  </p>
  <p>
-  朱牧民说：这个议案提出最重要的是，如何保护这些年轻的香港人，在抗战运动扮演重要角色的人。好多这些示威者没有BNO，因为他们不是97年之前出生、或他们未必能够有教育背景、或有钱做投资移民。所以将这个
-  <span href="https://www.secretchina.com/news/gb/tag/难民" target="_blank">
-   难民
-  </span>
-  身份优先其实是对民主运动及参与民主运动的香港人是特别重要。
+  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
+  <br>
+   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
+  </br>
  </p>
  <p>
-  马利诺夫斯基在6月30日提出相关法案，之后作出修改及简化，上月29日再提出新版法案，两日后即获委员会通过。法案指出，《港区国安法》令特定港人面临迫害威胁，美国透过提供“避风港”给予支持，美国亦应鼓励理念相近的国家提供类似的庇护。
+  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
+  <br>
+   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
+  </br>
  </p>
  <p>
-  目前，《香港人民自由和选择法案》的详细内容仍未公布。据本台了解，法案要求美国行政部门依据《移民与国籍法》，为面对及逃避政治迫害而无法安全回港的香港居民提供“临时保护身份”（temporary protected status），此身份让在指定期限里已置身美国境内的港人获得合法居留和工作许可。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  另外法案将有助加快处理难民及庇护申请，包含曾因参与和平抗议被逮捕、起诉、拘留或判罪的港人；曾在支持香港抗争公民社会组织中担当“重要角色”之人士，例如组织管理人员、急救人员、媒体记者与协助遭捕抗议者的法律人员等；以及他们的父母与子女。而未来五年，亦会维持香港有别于中国的移民待遇。
+  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
+  <br>
+   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
+   <br>
+    <br>
+     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
+     <br>
+      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
+     </br>
+    </br>
+   </br>
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -103,11 +96,9 @@
   </div>
  </center>
  <p>
-  另一方面，美国总统
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
-  </span>
-  (特朗普)早前针对《港区国安法》签署行政命令，内容包括基于人道理由，将部分难民配额给予港人。
+  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
+  <br/>
+  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -122,7 +113,9 @@
   </div>
  </center>
  <p>
-  美国国务院按照法例要求，周三（30日）已向国会提交2021财政年度的难民计划，名额有15000个，其中5000个名额，将给予香港、古巴和委内瑞拉等，是首次将香港列入难民计划的国家及地区组别名单。美国预计今个财政年度，会收到超过29万宗新的政治庇护申请。
+  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
+  <br/>
+  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -137,7 +130,9 @@
   </div>
  </center>
  <p>
-  抗争者之一的荃湾区议员岑敖晖对本台指，是次《香港人民自由和选择法案》对香港及香港人都有不同意义，显示国际已视香港为受严重压迫的地方。
+  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
+  <br/>
+  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -152,7 +147,48 @@
   </div>
  </center>
  <p>
-  岑敖晖说：香港其实在国际社会眼中，已经由一个国际金融中心变成一个受到极权压迫非常严重的地方，所以才会有一个大规模、大计划去将香港难民纳入其中。对于香港人的意义，我相信就是国际社会对香港人的救援，特别是人道、人权相关事务方面的救援。而对香港的意义亦清晰，就是国际社会都认同、即看得见香港是遭遇到些什么、亦见到香港人在极权下的争扎。在未来，我相信香港的情况只会更加严峻及恶劣。人权的问题更得不到保障。国际社会对香港的关注都重要。
+  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
+  <br/>
+  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
+  <br/>
+  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
+  <br/>
+  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
+  <br/>
+  <br/>
+  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
+  <br/>
+  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -171,7 +207,9 @@
   </ins>
  </center>
  <p>
-  据报道，有两名参与反修例示威的港人姊弟已获得美国的政治庇护。其中姐姐已在美国工作，而弟弟则正在读大学。协助他们的八九民运学生领袖郑存柱周五对本台表示，两人是在入境美国后寻求庇护。
+  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
+  <br/>
+  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -186,7 +224,9 @@
   </div>
  </center>
  <p>
-  对于香港破天荒列入美国的收容难民计划，与古巴和委内瑞拉并列，他感到悲哀。
+  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
+  <br/>
+  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -201,7 +241,9 @@
   </div>
  </center>
  <p>
-  郑存柱说：根据美国的理解，香港现在的人权状况非常恶劣，起着剧烈变化，加上中国颁布（香港）《国家安全法》，应该也是一个突发事件，所以会把（香港）等同于向古巴和委内瑞拉一样的（地区）。的确，这给我们一个非常悲哀的感觉，因为香港本来就是一个不存在难民的地方。香港以前是帮助难民的地方，结果今天香港人也要逃离，也要寻求国际社会的帮助，也要寻求难民的安置，并且和古巴这样的共产国家相提并论，实在是一个悲哀。
+  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
+  <br/>
+  【今译】只知前进不知后退，是招取祸败的道途。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -216,7 +258,9 @@
   </div>
  </center>
  <p>
-  中国及香港暂未对此事作回应。中国外交部发言人赵立坚之前曾回应指，香港事务纯属中国内政，不容任何外国干涉。中方希望美国多做有利于香港稳定繁荣，和中美关系发展的事。
+  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
+  <br/>
+  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -230,7 +274,23 @@
    </center>
   </div>
  </center>
- (文章仅代表作者个人立场和观点)
+ <p>
+  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
+  <br/>
+  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -249,7 +309,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -281,13 +341,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948042.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948042.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948042.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/03/948042.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/948042.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
