--- a/pages/p8/954384.md
+++ b/pages/p8/954384.md
@@ -1,4 +1,4 @@
-### “宁丢勿冰”的3种食物 及冰箱调温法(组图)
+### 人的“格局”决定“结局”(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,14 +6,18 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="冰箱 温度 鸡蛋 牛奶" src="https://img3.secretchina.com/pic/2020/8-1/p2745092a101003488-ss.jpg"/>
+ <p style="text-align:center">
+  <img alt="格局 结局 品行 安逸" src="https://img3.secretchina.com/pic/2020/12-2/p2830192a767544293-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   “宁丢勿冰”的3种食物，及
+   人的“
    <strong>
-    冰箱
+    格局
    </strong>
-   调温法。（图片来源：Adobestock）
+   ”决定“
+   <strong>
+    结局
+   </strong>
+   ”。（图片来源：Adobe ctock)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -25,60 +29,66 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.39.94:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.39.94:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.39.94:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.39.94:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.39.94:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.39.94:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《街对面的烛光》- 中领馆前16年7x24小时接力静坐抗议](http://141.164.39.94:10000/videos/news/../legend/index.html)
-
-#### [ 🔥  【九評之二】評中國共產黨是怎樣起家的](http://141.164.39.94:10000/videos/news/../res/jiuping/index.html)
-
-#### [ 🔥  【透視共產黨合集1】中共如何滲透侵略？如何詭辯卸責？危機脫身四套路](http://141.164.39.94:10000/videos/news/../res/detox/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  相信大家都看过
-  <span href="https://www.secretchina.com/news/gb/tag/冰箱" target="_blank">
-   冰箱
+  有一句话说得好：心有多宽，舞台就有多大；
+  <span href="https://www.secretchina.com/news/gb/tag/格局" target="_blank">
+   格局
   </span>
-  里面的
-  <strong>
-   温度
-  </strong>
-  控制钮，许多人对这不清楚，就随便调。调对了还好，省钱省电；若调错了，里面不但会经常结冰，还很耗电费钱。那么到底该如何调整呢？
+  有多大，心就能有多宽！
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  一般来说，冰箱里面的温控器有7个刻度，从1到7。当数字越大，代表
-  <span href="https://www.secretchina.com/news/gb/tag/温度" target="_blank">
-   温度
+  格局在
+  <span href="https://zh.wikipedia.org/wiki/%E5%B2%B3%E9%A3%9E">
+   岳飞
   </span>
-  越低，也就是说调到7的位置时，制冷的强度最强；在1的位置，制冷的强度最弱。对很多人来说，可能会觉得在调温控器的时候，夏天调得越大越好，冬天调的越小越好，但这其实是错误的想法。
+  那里就是八千里路云和月，三千功名尘与土的壮烈；
  </p>
  <p>
-  冰箱的温控器，还是要根据气温的变化适当的调试，说明书上通常也会写。如果较懒的话，那么一般来说，夏天可以把旋钮转到2～4之间，冬天则可以转到4～6之间，春秋季节的话，就转到中间的4就行了。
+  格局在
+  <span href="https://zh.wikipedia.org/wiki/%E9%A9%AC%E8%87%B4%E8%BF%9C">
+   马致远
+  </span>
+  那里却是小桥流水人家，断肠人在天涯的孤旅；
  </p>
  <p>
-  如此一来，只要记得四个季节，3个档位就好。像夏季气温高，一般都会把档位调小。冬季温度本来就低，我们就把档位调大。这样合理调节温控器，不但省电又省钱，也不用再担心冰箱动不动就结冰耗电了。
+  格局在
+  <span href="https://zh.wikipedia.org/wiki/%E8%8B%8F%E8%BD%BC">
+   苏轼
+  </span>
+  那里就是我欲乘风归去，又恐琼楼玉宇，高处不胜寒的的寂寞；
  </p>
- <p style="text-align: center;">
-  <img alt="合理调节温控器，不但省电又省钱，也不用再担心冰箱动不动就结冰耗电了。" src="https://img3.secretchina.com/pic/2020/8-1/p2745094a807257416-ss.jpg"/>
-  <br>
-   合理调节温控器，不但省电又省钱，也不用再担心冰箱动不动就结冰耗电了。
-  </br>
+ <p>
+  格局是一种眼界，是一种大情怀，一个人有多大的格局，就有多大的胸襟。有什么样的眼界和胸襟，就看到什么样的风景。
  </p>
+ <p>
+  一个人的格局越来越大，有三个迹象。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
   <strong>
-   ●3种宁丢勿冰的食物
+   【01】做事不怕慢
   </strong>
  </p>
  <center>
@@ -94,7 +104,7 @@
   </div>
  </center>
  <p>
-  在很多人的观念里，冰箱是一个“安全的冷冻库”，任何吃不完的食物都可以放进冰箱保存。但根据全球卫生理事协会的《家庭卫生报告》显示，冰箱可说是家里第二脏的地方。
+  俗话说：“不怕慢，就怕站；站一站，二里半。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -109,7 +119,7 @@
   </div>
  </center>
  <p>
-  研究显示，冰箱里平均每平方厘米的细菌密度高达1140万个，数量比马桶还高。有些人或许无法相信，因为冰箱明明是存放食物的，怎么会那么脏呢？
+  意思是做任何事，不怕速度慢，只怕止步不前。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -124,7 +134,7 @@
   </div>
  </center>
  <p>
-  这是因为冰箱里的致病菌主要有沙门氏菌、李斯特菌、大肠杆菌、金黄色葡萄球菌等等。很多人认为这样低温的环境，可以杀死细菌。但其实很多细菌在0-45摄氏度范围内依然可以生存，冷冻室只能抑制细菌的繁殖，让它进入“休眠期”，但是无法起到杀菌作用。
+  人生这条路很长，为了眼前的蝇头小利就停止了前进，势必会错过前方的风景。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -139,7 +149,37 @@
   </div>
  </center>
  <p>
-  因此，以下3种食物宁愿扔掉，也别放进冰箱里长时间保存。
+  真正厉害的人，看到的从不只是眼前的利益。他们不会拘泥于眼前的半亩方塘，而是何时何地都不忘远方的星辰大海。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  耐得住眼前的寂寞，才守得住未来的繁华。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  把眼光放长，路才会更长；经得起岁月漫长，岁月才会还你圆满。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -155,14 +195,59 @@
  </center>
  <p>
   <strong>
-   1
+   【02】懂得向前看
   </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在人生的道路上，最好的办法就是向前看。一个人，如果总是沉溺于过往，就注定到不了远方。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  昨天的你是你，但那已经是过去，今天的你也是你，比昨天想得更多，懂得更多。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  人常说：“格局二字，格是人格
   <strong>
-   、破碎的
-   <span href="https://www.secretchina.com/news/gb/tag/鸡蛋" target="_blank">
-    鸡蛋
+   <span href="https://www.secretchina.com/news/gb/tag/品行" target="_blank">
+    品行
    </span>
   </strong>
+  ，局是气度胸襟。心胸越大，格局越大；格局越大，成就越大。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,44 +262,26 @@
   </div>
  </center>
  <p>
-  鸡蛋的外壳既薄又脆弱，稍不小心就会打破。有些人觉得扔掉可惜，就会把破掉的鸡蛋放进冰箱继续保存。但这种有破损，或是半生不熟的鸡蛋中，最容易出现
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwiFvoSXtPnqAhUPBZQKHf9gBqcQmhMwDHoECAsQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E6%25B2%2599%25E9%2596%2580%25E6%25B0%258F%25E8%258F%258C%25E5%25B1%25AC&amp;usg=AOvVaw2EJz3cHxLPTWHcZBmRMcV2">
-   沙门杆菌
+  深以为然。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  心中有多少度量，就能撑得下多大的船；心中有怎样的格局，就能写出怎样的
+  <span href="https://www.secretchina.com/news/gb/tag/结局" target="_blank">
+   结局
   </span>
-  ，而这种细菌只有经过高温加热才能被杀死。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  若一旦感染沙门杆菌，就会出现腹痛、恶心等症状，严重的还可能脱水痉挛。所以鸡蛋破损后，最好赶快吃掉，平时烹饪的过程中也要尽量将鸡蛋煮熟，确保里面的细菌全部杀死后再食用。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align: center;">
-  <img alt="有破损，或是半生不熟的鸡蛋中，最容易出现沙门杆菌。" src="https://img3.secretchina.com/pic/2020/2-18/p2629802a968285688-ss.jpg"/>
-  <br>
-   有破损，或是半生不熟的鸡蛋中，最容易出现沙门杆菌。
-  </br>
+  。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -230,14 +297,59 @@
  </center>
  <p>
   <strong>
-   2
+   【03】心中藏忧患
   </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “居安思危，思则有备，有备无患。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  意思是，在
   <strong>
-   、没喝完的
-   <span href="https://www.secretchina.com/news/gb/tag/牛奶" target="_blank">
-    牛奶
+   <span href="https://www.secretchina.com/news/gb/tag/安逸" target="_blank">
+    安逸
    </span>
   </strong>
+  的环境里，也要保有危机意识。认真地思考未来，才能有备无患。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  有二个大学毕业的新人，同时进入一家公司，但在一起工作后，两人的境遇却大不相同。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -256,11 +368,7 @@
   </ins>
  </center>
  <p>
-  夏天是细菌性感染的高发期，也是
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwjV3u6mtPnqAhVBzIsBHZAZBqcQmhMwDHoECAgQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E6%259D%258E%25E6%2596%25AF%25E7%2589%25B9%25E8%258F%258C&amp;usg=AOvVaw0ip5hrhHztrVSeZ05Qvd_n">
-   李斯特菌
-  </span>
-  污染食品的高风险期。李斯特菌在低温条件下能生存很久，一般会出现在未喝完的牛奶、生肉、鱼虾等海鲜食物中。
+  其中一人很满意自己的现状，做完本职工作之后就在办公室里吹吹空调、玩玩手机，日子过得很是惬意。而另一人一进单位，就参加培训，加强自己不足的地方，利用一切闲暇的时间来学习。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -275,7 +383,7 @@
   </div>
  </center>
  <p>
-  在细菌中，李斯特菌算是非常聪明的，它会感染老人、孕妇、新生儿等免疫力低的人。若一旦染病，会出现发热、腹痛、腹泻、呕吐、肌肉疼痛等症状，不及时救治的话，还可能引发脑膜炎、败血症等等。
+  周遭的同事常嘲笑他，这工作朝九晚五的很稳定，何必自讨苦吃瞎折腾呢？可他却说：“现在虽然是稳定，但谁也不能保证以后不会有变数，多学点东西有个退路总是没错的。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -290,12 +398,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   3
-  </strong>
-  <strong>
-   、生菜
-  </strong>
+  结果几年之后公司必须缩小编制，那个整天吹空调玩手机的被辞退了，而另一位不断进修的人，反而因此升职。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -310,7 +413,7 @@
   </div>
  </center>
  <p>
-  很多人在吃生菜时，若还有剩，常常舍不得扔掉，会再放进冰箱里保存。但对于这种凉拌类食物，拿出来直接食用的风险非常高，因为这类食物十分容易受到细菌的污染。
+  俗话说：“马行软地易失蹄，人贪安逸易失志。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -325,7 +428,7 @@
   </div>
  </center>
  <p>
-  所以从冰箱取出的生菜，一定要经过加热，煮熟后再食用，才能保证食物的卫生。
+  因为过分的安逸会麻痹人的神经、消磨人的斗志。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -340,7 +443,7 @@
   </div>
  </center>
  <p>
-  正确使用冰箱，不但能省电、省钱，还能顾及全家人的健康，不可不慎。
+  一位作家说：“很多人成不了大气候，不是因为能力不行、机会不够，而是因为过早地选择了安逸的生活，停止了奔跑。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -354,7 +457,67 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:10px;">
+ <p>
+  不沉迷于安逸、居安思危，是一种了不起的智慧，更是一种非凡的格局。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  因为它背后，是时刻保持着头脑清醒，和对未来的警醒。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  欲成大器，先有格局。而所谓格局，不过是眼中有尺、心中有量。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  愿往后余生的每个日子里，你我都能把格局放宽，活出最好的模样！
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
@@ -372,7 +535,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="https://img3.secretchina.com/pic/2020/7-29/p2742721a263579567.jpg" width="300px"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -404,13 +567,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/941474.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/941474.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/941474.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/01/941474.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954384.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954384.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954384.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/04/954384.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/941474.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/954384.md' width='0px' height='0px'/>
